# DeepScan

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUARDIAN_SCAN_PLAN.md  LICENSE  README.md  SECURITY.md  dep-scan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: false_positive.yml  missing_detection.yml  new_ecosystem.yml
.github/workflows/: validate.yml
docs/: adding-to-blocklist.md  ci-usage.md  how-it-works.md  installation.md
tests/: README.md
tests/fixtures/clean/: package.json  requirements.txt
tests/fixtures/go/: go.mod  go.sum
tests/fixtures/npm/: package-lock.json  package.json
tests/fixtures/npm/src/api/: client.js
tests/fixtures/pip/: pyproject.toml  requirements.txt
tests/fixtures/rust/: Cargo.toml
